# g2disk

./: BUILD  LICENSE  MODULE.bazel  README.md  extension.bzl  go.mod  go.sum  nbdkit.bzl  version.bzl
cmd/server/grpc/: BUILD  grpc.go
cmd/server/grpc/gcs/: BUILD  gcs_server.go
cmd/server/grpc/ramdisk/: BUILD  ramdisk_server.go
docs/: api.md  building.md  index.md  internals.md  motivation.md
pkg/nbdkit/grpc/: BUILD  g2disk.go  protocol.go
proto/: BUILD  g2disk_service.proto
remote/gcs/: BUILD
remote/google_api/: BUILD
remote/grpc/: BUILD
